hints/yaml/challenge-network-policies/deny-all-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-deny-all
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress: []
